samples/workflow/workflow-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-svc
  namespace: gott
  labels:
    istio: gott-share-workflow-svc
spec:
  selector:
    istio: gott-share-workflow
  ports:
  - name: http-workflow
    port: 9002
    targetPort: 9002
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: share-workflow-service
  name: gott-share-workflow
  namespace: gott
spec:
  ports:
  - name: workflow-metrics
    port: 9002
    protocol: TCP
    targetPort: 9002
  selector:
    app: gott-share-workflow
  type: ClusterIP
