samples/workflow/workflow-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: workflow-virtual
  namespace: gott
spec:
  hosts:
  - workflow.epetbar.com
  gateways:
  - workflow-gateway
  http:
  - match:
    - headers:
        access-method:
          exact: canary
    route:
    - destination:
        host: gott-share-workflow-canary
  - route:
    - destination:
        host: gott-share-workflow
